--- a/index.html
+++ b/index.html
@@ -8,25 +8,17 @@
     <title>Ian Dong's Website</title>
 </head>
 <body>
-    <div class="splash-page">
-        <div class="navbar">
-            <div class="logo"></div>
-            <div class="nav">
-                <div class="nav-button">
-                    <a href=""></a>
-                </div>
-                <div class="nav-button">Portfolio</div>
-                <div class="nav-button">Contact</div>
+    <div class="navbar">
+        <div class="nav">
+            <div class="nav-button">
+                <a href="#about">About</a>
             </div>
-        </div>
-        <div class="headline"></div>
-    </div>
-    <div class="portfolio">
-        <div class="proj-col">
-            <div class="proj-name"></div>
-        </div>
-        <div class="proj-col">
-            <div class="proj-name"></div>
+            <div class="nav-button">
+                <a href="#projects">Projects</a>
+            </div>
+            <div class="nav-button">
+                <a href="#contact">Contact</a>
+            </div>
         </div>
     </div>
 </body>
