--- a/index.html
+++ b/index.html
@@ -14,10 +14,30 @@
                 <a href="#about">About</a>
             </div>
             <div class="nav-button">
-                <a href="#projects">Projects</a>
+                <a href="#portfolio">Portfolio</a>
             </div>
             <div class="nav-button">
                 <a href="#contact">Contact</a>
+            </div>
+        </div>
+    </div>
+    <div id="about">
+        <div class="role">
+            <p>Engineer, Educator</p>
+        </div>
+        <div class="name">
+            <p>Ian Dong</p>
+        </div>
+        <div class="description">
+            <p>Aspiring computer software engineer passionate about the intersection of technology and healthcare.</p>
+        </div>
+    </div>
+    <div id="#portfolio">
+        <div class="projects">
+            <div class="group">
+                <div class="project">
+                    
+                </div>
             </div>
         </div>
     </div>
