--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Aspiring computer software engineer passionate about the intersection of technology and healthcare.</p>
         </div>
     </div>
-    <div id="#portfolio">
+    <div id="portfolio">
         <div class="projects">
             <div class="project">
                 <div class="title">
@@ -55,8 +55,14 @@
             </div>
         </div>
     </div>
-    <div id="#contact">
-
+    <div id="contact">
+        <div class="contact-box">
+            <div class="contact-content">
+                <div class="title">
+                    <h1>Contact</h1>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
