--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                 <div class="title">
                     <h1>Contact</h1>
                 </div>
+                <div>
+                    <p>Hey. My name is Ian Dong and I am a student at UC Berkeley. You can reach me at ihdong@berkeley.edu.</p>
+                </div>
             </div>
         </div>
     </div>
