--- a/index.html
+++ b/index.html
@@ -173,13 +173,15 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-            <div class="center">
-              <div class="pdf">
-             <i class='bx bxs-file-pdf'>
-               <a href="https://ianhdong.github.io"></a>
-             </i>
-            </div>
-            </div>
+            <a href="https://ianhdong.github.io/assests/pdf/IanDongResume.pdf">
+              <div class="center">
+                <div class="pdf">
+                  <i class='bx bxs-file-pdf'>
+                    
+                  </i>
+                </div>  
+              </div>
+            </a>
         </div>
 
         <div class="row">
