--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-            <a href="https://ianhdong.github.io/assests/pdf/IanDongResume.pdf">
+            <a href="assets/pdf/IanDongResume.pdf">
               <div class="center">
                 <div class="pdf">
                   <i class='bx bxs-file-pdf'>
