--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-            <a href="assets/pdf/IanDongResume.pdf">
-              <div class="center">
-                <div class="pdf">
-                  <i class='bx bxs-file-pdf'>
-                    
-                  </i>
-                </div>  
-              </div>
-            </a>
+          <a href="https://ianhdong.github.io/assets/pdf/IanDongResume.pdf" target="_blank">
+            <div class="center">
+              <div class="pdf">
+                <i class='bx bxs-file-pdf'>
+                  
+                </i>
+              </div>  
+            </div>
+          </a>
         </div>
 
         <div class="row">
