--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="Ian Dong's Website" name="keywords">
 
   <!-- Favicons -->
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
+  <link rel="icon" type="image/x-icon"  href="favicon.ico">
 
   <!-- Google Fonts -->
   <link
