--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="Ian Dong's Website" name="keywords">
 
   <!-- Favicons -->
-  <link rel="icon" type="image/x-icon"  href="favicon.ico">
+  <link href="favicon.ico" rel="icon">
 
   <!-- Google Fonts -->
   <link
