--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <meta content="Ian Dong's Website" name="keywords">
 
   <!-- Favicons -->
-  <link href="favicon.ico" rel="icon">
+  <link rel="icon" href="favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="favicon.ico">
 
   <!-- Google Fonts -->
   <link
