--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <meta content="Ian Dong's Website" name="keywords">
 
   <!-- Favicons -->
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/ico" href="favicon.ico">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
   <!-- Google Fonts -->
   <link
