--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/ico" href="favicon.ico">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
-  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
   <!-- Google Fonts -->
   <link
@@ -86,8 +86,8 @@
         <div class="section-title">
           <h2>About Me</h2>
           <p>
-            Hey! I'm Ian Dong. I am interested in the intersection of business and technology and how they can impact
-            society.
+            Hey! I'm Ian Dong. I am interested in the intersection of business and technology and their impact on our
+            world.
           </p>
         </div>
 
@@ -96,18 +96,19 @@
             <img src="assets/img/iandongprofile.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Computer Scientist &amp; Web Developer.</h3>
-            <p class="fst-italic">
+            <h3>Software Engineer &amp; Web Developer.</h3>
+            <!-- <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore
               magna aliqua.
-            </p>
+            </p> -->
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a
                         href="https://ianhdong.github.io">https://ianhdong.github.io</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong><a href="tel:9255968235"><span>(925)-596-8235</span></a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong><a
+                      href="tel:9255968235"><span>(925)-596-8235</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Berkeley, CA, USA</span></li>
                 </ul>
               </div>
@@ -120,10 +121,9 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et
-              ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-              Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              I am currently an undergraduate student at the University of California, Berkeley pursuing a BA in
+              Computer Science.
+              I am based from the San Francisco Bay Area and call it home.
             </p>
           </div>
         </div>
@@ -234,8 +234,10 @@
               <h5>2022 - Present</h5>
               <h3><em>Cloud at California, Berkeley, CA</em></h3>
               <ul>
-                <li>Member of a consulting group led by UC Berkeley students that aims to build and support the next generation of cloud engineers</li>
-                <li>Chosen to work with other cohorts of students on several projects and become cloud certified as well as develop proficiency in Amazon Web Services (AWS)</li>
+                <li>Member of a consulting group led by UC Berkeley students that aims to build and support the next
+                  generation of cloud engineers</li>
+                <li>Chosen to work with other cohorts of students on several projects and become cloud certified as well
+                  as develop proficiency in Amazon Web Services (AWS)</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -244,7 +246,8 @@
               <h3><em>UC Berkeley Electrical Engineering and Computer Science (EECS), Berkeley, CA</em></h3>
               <ul>
                 <li>Assisted in weekly CS 61A labs; on average facilitated 15+ student requests</li>
-                <li>Helped students debug their code, resolved any logistical concerns, and supplemented learning with mini-lectures</li>
+                <li>Helped students debug their code, resolved any logistical concerns, and supplemented learning with
+                  mini-lectures</li>
               </ul>
             </div>
           </div>
@@ -728,7 +731,9 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <a href="tel:9255968235"><p>(925)-596-8235</p></a>
+                <a href="tel:9255968235">
+                  <p>(925)-596-8235</p>
+                </a>
               </div>
 
               <div class="github">
