added blythe hub and ants

--- a/blythe.html
+++ b/blythe.html
@@ -26,13 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: MyResume - v4.7.0
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -49,17 +42,17 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                <div>
+                  <img src="assets/img/portfolio/blythe-mainpage.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -68,18 +61,22 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Blythe Mental Health Hub</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Organization</strong>: Foothill High School Hackathon</li>
+                <li><strong>Tech</strong>: HTML, CSS</li>
+                <li><strong>Project Date</strong>: November 2019</li>
+                <li><strong>Project Link</strong>: <a href="https://ianhdong.github.io/blythe-hub/">Blythe Mental Health Hub</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                During my high school's annual hackathon, I wanted to build a website 
+                that could help impact society and thus this prototype was born. As a student,
+                I felt a lot of stress and wanted stronger mental health resources so I created
+                a working mental health hub that could connect students with the aid of professionals.
+                Features include an integrated Discord chat bot and gallery with uplifting quotes. I want
+                to continue working on this project and hope to turn it into a working app.
               </p>
             </div>
           </div>
