--- a/blythe.html
+++ b/blythe.html
@@ -63,7 +63,7 @@
             <div class="portfolio-info">
               <h3>Blythe Mental Health Hub</h3>
               <ul>
-                <li><strong>Organization</strong>: Foothill High School Hackathon</li>
+                <li><strong>Organization</strong>: Gigahacks</li>
                 <li><strong>Tech</strong>: HTML, CSS</li>
                 <li><strong>Project Date</strong>: November 2019</li>
                 <li><strong>Project Link</strong>: <a href="https://ianhdong.github.io/blythe-hub/">Blythe Mental Health Hub</a></li>
