--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               I am based from the San Francisco Bay Area but would love to explore different places around me.
             </p>
             <p>
-              Some activities I enjoy are building fun programming projects, tutoring computer science, 
+              Some activities I enjoy are building fun programming projects, tutoring computer science,
               binging Netflix, and watching the Golden State Warriors and the Kansas City Chiefs.
             </p>
           </div>
@@ -384,8 +384,8 @@
                 <h4>Blythe Mental Health Hub</h4>
                 <p>Personal Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/blythe.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Blythe Mental Health Hub"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/blythe.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Blythe Mental Health Hub"><i class="bx bx-plus"></i></a>
                   <a href="blythe.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -432,8 +432,8 @@
                 <h4>Ants vs SomeBees</h4>
                 <p>School Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/ants.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Ants vs SomeBees"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/ants.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Ants vs SomeBees"><i class="bx bx-plus"></i></a>
                   <a href="ants.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -480,8 +480,8 @@
                 <h4>Scheme Interpreter</h4>
                 <p>School Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/scheme.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Scheme Interpreter"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/scheme.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Scheme Interpreter"><i class="bx bx-plus"></i></a>
                   <a href="scheme.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -489,7 +489,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -503,7 +503,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
