--- a/cs180/proj1/index.html
+++ b/cs180/proj1/index.html
@@ -86,7 +86,7 @@
       padding: 2px;
     }
   </style>
-  <title>CS 184 Mesh Edit</title>
+  <title>CS 180: Images of the Russian Empire</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
 
@@ -173,7 +173,7 @@
       Low Resolution JPG Results.
     </h3>
     <!-- Example of including multiple figures -->
-    Here are some images of the low resolution JPG images after applying the simple single-scale approach:
+    Here are some images of the low resolution JPG images after applying the simple single-scale approach. The displacment represents the change in the rows and then the columns.
     <br><br>
     <div align="middle">
       <table>
@@ -207,13 +207,14 @@
     </div>
   </div>
   <br>
+  <br>
   <h2 align="middle">Section IV: High Resolution TIF Results</h2>
   <div class="bounding-box">
     <h3 align="middle">
       High Resolution TIF Results.
     </h3>
     <!-- Example of including multiple figures -->
-    Here are some images of the high resolution TIF images after applying the image pyramid approach:
+    Here are some images of the high resolution TIF images after applying the image pyramid approach. The displacment represents the change in the rows and then the columns.
     <br><br>
     <div align="middle">
       <table>
@@ -250,11 +251,57 @@
             Red Shift: (89, 23)
           </td>
           <td>
-            <img src="./Images/TIF Images/harvesters.jpg" align="middle" width="400px" />
-            <figcaption><code class="highlighter-rouge">harvesters.tif</code></figcaption>
-            Green Shift: (60, 16)
+            <img src="./Images/TIF Images/lady.jpg" align="middle" width="400px" />
+            <figcaption><code class="highlighter-rouge">lady.tif</code></figcaption>
+            Green Shift: (53, 8)
             <br>
-            Red Shift: (124, 13)
+            Red Shift: (117, 10)
+          </td>
+          <td>
+            <img src="./Images/TIF Images/melons.jpg" align="middle" width="400px" />
+            <figcaption><code class="highlighter-rouge">melons.tif</code></figcaption>
+            Green Shift: (82, 8)
+            <br>
+            Red Shift: (178, 12)
+          </td>
+        </tr>
+        <tr align="center">
+          <td>
+            <img src="./Images/TIF Images/onion_church.jpg" align="middle" width="400px" />
+            <figcaption><code class="highlighter-rouge">onion_church.tif</code></figcaption>
+            Green Shift: (51, 26)
+            <br>
+            Red Shift: (108, 36)
+          </td>
+          <td>
+            <img src="./Images/TIF Images/sculpture.jpg" align="middle" width="400px" />
+            <figcaption><code class="highlighter-rouge">sculpture.tif</code></figcaption>
+            Green Shift: (33, -11)
+            <br>
+            Red Shift: (140, -26)
+          </td>
+          <td>
+            <img src="./Images/TIF Images/self_portrait.jpg" align="middle" width="400px" />
+            <figcaption><code class="highlighter-rouge">self_portrait.tif</code></figcaption>
+            Green Shift: (78, 28)
+            <br>
+            Red Shift: (176, 36)
+          </td>
+        </tr>
+        <tr align="center">
+          <td>
+            <img src="./Images/TIF Images/three_generations.jpg" align="middle" width="400px" />
+            <figcaption><code class="highlighter-rouge">three_generations.tif</code></figcaption>
+            Green Shift: (54, 11)
+            <br>
+            Red Shift: (112, 9)
+          </td>
+          <td>
+            <img src="./Images/TIF Images/train.jpg" align="middle" width="400px" />
+            <figcaption><code class="highlighter-rouge">train.tif</code></figcaption>
+            Green Shift: (43, 5)
+            <br>
+            Red Shift: (87, 31)
           </td>
         </tr>
       </table>
